--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
     <h1>Chat App</h1>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/public/js/chat.js"></script>
 </body>
 </html>
