socket.io Connections Setup

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     Chat App
+    <button id="plus">+1</button>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
+    <script src="js/chat.js"></script>
   </body>
 </html>
