--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     Chat App
-    <button id="plus">+1</button>
+    <form action="submit">
+        <input type="text">
+        <button type="submit"></button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
   </body>
