--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     Chat App
-    <form action="submit">
-        <input type="text">
-        <button type="submit"></button>
+    <form action="submit" id="mess">
+      <input type="text" />
+      <button type="submit">Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
