--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <input type="text" />
       <button type="submit">Send</button>
     </form>
+    <button id="location">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
   </body>
