--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <body>
     Chat App
     <form action="submit" id="mess">
-      <input type="text" />
+      <input type="text" placeholder="Type something" />
       <button type="submit">Send</button>
     </form>
     <button id="location">Send Location</button>
