--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,17 @@
   </head>
   <body>
     Chat App
+    <div id="messages"></div>
     <form action="submit" id="mess">
       <input type="text" placeholder="Type something" />
       <button type="submit">Send</button>
     </form>
     <button id="location">Send Location</button>
+
+    <script id="mess-temp" type="text/html">
+      <p>{{messages}}</p>
+    </script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
