--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
     <script id="mess-temp" type="text/html">
       <p>{{messages}}</p>
     </script>
+    <script id="location-temp" type="text/html">
+      <a href="{{url}}">My Location</a>
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
