--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       <p>{{messages}}</p>
     </script>
     <script id="location-temp" type="text/html">
-      <a href="{{url}}">My Location</a>
+      <a href="{{url}}" target="_blank">My Location</a>
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
